--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
 }
 
 .App-header {
-  background-color: #795548;
+  background-color: #e4e11e;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: black;
   margin-left: 1em;
   margin-right: 1em;
   margin-top: 1em;
@@ -17,7 +17,7 @@
 }
 
 .App-nav {
-  background: #A1887F;
+  background:#c0ba1a;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(1em, auto);
@@ -28,7 +28,7 @@
 }
 
 .App-nav>a:hover {
-  background: #BCAAA4;
+  background: #e6ffb3;
 }
 
 .App-body {
@@ -40,12 +40,12 @@
 }
 
 .App-body>div {
-  background: #D7CCC8;
+  background: #e4d914;
   padding: 1em;
 }
 
 .App-body>div:nth-child(odd) {
-  background: #BCAAA4;
+  background: #fdf14b;
 }
 
 .App-intro {
