--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #e4e11e;
+  background-color: #63aae4;
   height: 150px;
   padding: 20px;
   color: black;
@@ -15,10 +15,12 @@
 .App-title {
   font-size: 3.5em;
   margin-top: 0px;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .App-nav {
-  background:#c0ba1a;
+  font-family: 'Press Start 2P', cursive;
+  background:#107bd3;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(1em, auto);
@@ -29,7 +31,7 @@
 }
 
 .App-nav>a:hover {
-  background: #e6ffb3;
+  background: #8bc1ec;
 }
 
 .App-body {
@@ -41,13 +43,13 @@
 }
 
 .App-body>div {
-  background: #e4d914;
+  background: #5ea3d8;
   padding: 1em;
 }
 
-.App-body>div:nth-child(odd) {
-  background: #fdf14b;
-}
+/* .App-body>div:nth-child(odd) {
+  background: #8bc1ec;
+} */
 
 .App-intro {
   font-size: large;
