--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #63aae4;
+  background-color: #fca14c;
   height: 150px;
   padding: 20px;
   color: black;
@@ -20,7 +20,7 @@
 
 .App-nav {
   font-family: 'Press Start 2P', cursive;
-  background:#107bd3;
+  background:#fa7a09;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(1em, auto);
@@ -31,7 +31,7 @@
 }
 
 .App-nav>a:hover {
-  background: #8bc1ec;
+  background: #ffba81;
 }
 
 .App-body {
@@ -43,7 +43,7 @@
 }
 
 .App-body>div {
-  background: #5ea3d8;
+  background: #ffba81;
   padding: 1em;
 }
 
